--- a/app/views/two_factor_authentication/backup_code_verification/show.html.slim
+++ b/app/views/two_factor_authentication/backup_code_verification/show.html.slim
@@ -1,6 +1,6 @@
 - title t('titles.enter_2fa_code')
 
-h1.h3.my0 = t('two_factor_authentication.personal_key_header_text')
+h1.h3.my0 = t('two_factor_authentication.backup_code_header_text')
 p.mt-tiny.mb0 = t('two_factor_authentication.backup_code_prompt')
 
 = simple_form_for(@backup_code_form, url: login_two_factor_backup_code_path,
