--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -1,14 +1,2 @@
-- cancel = sign_up_or_idv_no_js_link || link
-- other_cancel = link || decorated_session&.sp_return_url || profile_path
-
 .mt2.pt1.border-top
-  - if user_signing_up?
-    - method = user_signing_up? ? :delete : :get
-
-    = button_to cancel_link_text, cancel, method: method,
-      class: 'btn btn-link', id: 'auth-flow-cancel'
-    = render 'shared/cancel_action_modal',
-      idv: user_verifying_identity?,
-      user_signing_up: user_signing_up?
-  - else
-    = link_to cancel_link_text, other_cancel, class: 'h5'
+  = link_to cancel_link_text, sign_up_cancel_path, class: 'h5'
