--- a/app/views/partials/personal_key/_entry_fields.html.slim
+++ b/app/views/partials/personal_key/_entry_fields.html.slim
@@ -1,4 +1,4 @@
-- word_count = Figaro.env.personal_key_length.to_i
+- word_count = Figaro.env.recovery_code_length.to_i
 
 .mb3
   = f.input attribute_name,
