--- a/app/views/user_mailer/undeliverable_address.slim
+++ b/app/views/user_mailer/undeliverable_address.slim
@@ -1,5 +1,7 @@
 p.lead == t('.intro', app: link_to(APP_NAME, Figaro.env.mailer_domain_name, class: 'gray'))
 
+p.lead == t('.call_to_action')
+
 table.spacer
   tbody
     tr
