--- a/app/views/users/backup_code_setup/index.html.slim
+++ b/app/views/users/backup_code_setup/index.html.slim
@@ -1,31 +1,49 @@
 - title t('forms.backup_code.title')
+- btn_cls = 'ml2 btn-border ico ico-print text-decoration-none'
 
-h1.h3.my0 = t('forms.backup_code.info')
-p.mt-tiny.mb3 = t('forms.backup_code.instructions')
+h1.h3.my0.mt0 = t('forms.backup_code.info')
+p.mt-tiny.mb3 == t('forms.backup_code.instructions')
 .mb3
   fieldset.m0.p0.rounded-xl
     ul.list-reset
-      li.px-12p.mb1.border-none.mt1
-        .inline-block.h2.px-20p.bold = t('forms.backup_code.subtitle1')
+      li.px-12p.mb1.border-none.mt1.m2
+        .inline-block.h1.bold = t('forms.backup_code.subtitle1')
         .inline-block = t('forms.backup_code.subinfo1')
       li.mb0.border-top
+        .alert-warning.p1.bold = \
+          image_tag(asset_url('alert/warning.svg'), size: '20', class: 'mr1') + \
+          t('forms.backup_code.warn')
         table.ml4
           tr
             td
               br
               strong
-                - @codes[0..@codes.length / 2].each do |code|
+                - @codes[0..@codes.length / 2 - 1].each do |code|
                   = code.upcase.insert 4, '-'
                   br
                   br
             td
               br
               strong
-                - @codes[@codes.length / 2 + 1..-1].each do |code|
+                - @codes[@codes.length / 2..-1].each do |code|
                   = code.upcase.insert 4, '-'
                   br
                   br
+        .center
+          = link_to t('forms.backup_code.print'), '#',
+            data: { print: true },
+            class: 'ml2 btn-border ico ico-print text-decoration-none'
+          .clipboard.ml2.mt-tiny class=btn_cls data-clipboard-text=@codes.join(' ')
+            = link_to t('links.copy'), '#', class: 'text-decoration-none'
 
+h2.h3.my0 = t('forms.backup_code.new_login_codes')
+p.mb0 = t('forms.backup_code.new_info')
+br
+= link_to t('forms.backup_code.new_codes'), '',
+  class: 'ml2 btn-border ico ico-refresh text-decoration-none'
+br
+br
+br
 = form_tag(backup_code_setup_path, method: :patch, role: 'form', class: 'mb1') do
   .clearfix.mxn1
     .col.col-6.sm-col-5.px1
