--- a/app/views/users/backup_code_setup/index.html.slim
+++ b/app/views/users/backup_code_setup/index.html.slim
@@ -7,8 +7,8 @@ p.mt-tiny.mb3 == t('forms.backup_code.instructions')
   fieldset.m0.p0.rounded-xl
     ul.list-reset
       li.px-12p.mb1.border-none.mt1.m2
-        .inline-block.h1.bold = t('forms.backup_code.subtitle1')
-        .inline-block = t('forms.backup_code.subinfo1')
+        .inline-block.h1.bold = t('forms.backup_code.subtitle')
+        .inline-block = t('forms.backup_code.subinfo')
       li.mb0.border-top
         .alert-warning.p1.bold = \
           image_tag(asset_url('alert/warning.svg'), size: '20', class: 'mr1') + \
