Added download icon

--- a/app/views/users/backup_code_setup/index.html.slim
+++ b/app/views/users/backup_code_setup/index.html.slim
@@ -35,7 +35,7 @@ p.mt-tiny.mb3 == t('forms.backup_code.instructions')
         .center
           .ml2.mt-tiny class=btn_cls
             = link_to t('forms.backup_code.download'), backup_code_download_path,
-              class: 'text-decoration-none'
+              class: 'text-decoration-none ico ico-download'
           = link_to t('forms.backup_code.print'), '#',
             data: { print: true },
             class: 'ml2 btn-border ico ico-print text-decoration-none'
