--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -8,6 +8,10 @@
     background-image: url(image-path('ico-copy.svg'));
   }
 
+  &-download {
+    background-image: url(image-path('ico-download.svg'));
+  }
+
   &-refresh {
     background-image: url(image-path('ico-refresh.svg'));
   }
