--- a/app/views/users/backup_code_setup/index.html.slim
+++ b/app/views/users/backup_code_setup/index.html.slim
@@ -1,9 +1,8 @@
 - title t('forms.backup_code.title')
-- btn_cls = 'btn-border text-decoration-none'
 
 h1.h3.my0.mt0 = t('forms.backup_code.info')
 p.mt-tiny.mb3 == t('forms.backup_code.instructions')
-.mb3
+.mb4
   fieldset.m0.p0.rounded-xl
     ul.list-reset
       li.px-12p.mb1.border-none.mt1.m2
@@ -13,10 +12,9 @@ p.mt-tiny.mb3 == t('forms.backup_code.instructions')
             date: content_tag(:strong, I18n.l(Time.zone.today, format: '%B %d, %Y')))
         .inline-block = t('forms.backup_code.subinfo')
       li.mb0.border-top
-        .alert-warning.p1.bold = \
-          image_tag(asset_url('alert/warning.svg'), size: '20', class: 'mr1') + \
-          t('forms.backup_code.warn')
-        table.ml4
+        .alert-inline.bold.border-bottom
+          = t('forms.backup_code.warn')
+        table.pl4.pr3.monospace
           tr
             td
               br
@@ -32,25 +30,25 @@ p.mt-tiny.mb3 == t('forms.backup_code.instructions')
                   = code.upcase.insert(8, '-').insert(4, '-')
                   br
                   br
-        .center
-          .ml2.mt-tiny class=btn_cls
-            = link_to t('forms.backup_code.download'), backup_code_download_path,
-              class: 'text-decoration-none ico ico-download'
+        .center.mt1
+          = link_to t('forms.backup_code.download'), backup_code_download_path,
+            class: 'text-decoration-none ico btn-border ico-download'
           = link_to t('forms.backup_code.print'), '#',
             data: { print: true },
-            class: 'ml2 btn-border ico ico-print text-decoration-none'
-          .clipboard.ml2.mt-tiny class=btn_cls data-clipboard-text=@codes.join(' ')
-            = link_to t('links.copy'), '#', class: 'text-decoration-none ico ico-copy'
+            class: 'ico ico-print btn-border ml2 text-decoration-none'
+          = link_to t('links.copy'), '#',
+            class: 'text-decoration-none ml2 clipboard btn-border ico ico-copy',
+            data: {"clipboard-text": @codes.join(' ')}
 
 h2.h3.my0 = t('forms.backup_code.new_login_codes')
 p.mb0 = t('forms.backup_code.new_info')
-br
-= link_to t('forms.backup_code.new_codes'), '',
-  class: 'ml2 btn-border ico ico-refresh text-decoration-none'
-br
-br
-br
-= form_tag(backup_code_setup_path, method: :patch, role: 'form', class: 'mb1') do
+
+.mt2.mb4
+  = link_to t('forms.backup_code.new_codes'), '',
+    class: 'btn-border ico ico-refresh text-decoration-none'
+
+
+= form_tag(backup_code_setup_path, method: :patch, role: 'form') do
   .clearfix.mxn1
     .col.col-6.sm-col-5.px1
       = button_tag t('forms.buttons.continue'), type: 'submit', class: 'btn btn-primary btn-wide'
