--- a/app/views/accounts/_device_item.html.slim
+++ b/app/views/accounts/_device_item.html.slim
@@ -2,7 +2,7 @@
   .clearfix.mxn1
     .sm-col.sm-col-6.px1
       .bold.truncate = device.nice_name
-      = local_time(device.last_used_at, t('time.formats.event_timestamp'))
+      = local_time(device.happened_at, t('time.formats.event_timestamp'))
     .sm-col.sm-col-6.px1.sm-right-align
       = device.last_sign_in_location_and_ip
       br
