--- a/app/views/accounts/_event_item.html.slim
+++ b/app/views/accounts/_event_item.html.slim
@@ -2,5 +2,6 @@
   .clearfix.mxn1
     .sm-col.sm-col-6.px1
       .bold.truncate = event.event_type
+      = event.last_sign_in_location_and_ip
     .sm-col.sm-col-6.px1.sm-right-align
       = local_time(event.happened_at, t('time.formats.event_timestamp'))
