--- a/app/views/accounts/events/show.html.slim
+++ b/app/views/accounts/events/show.html.slim
@@ -7,5 +7,7 @@
   .bg-lightest-blue.pb1.pt1.px2.h6.caps.clearfix
     = t('headings.account.account_history')
     = image_tag asset_url('history.svg'), width: 12, class: 'ml1'
+    br
+    = @device.device_name
   - @events.each do |event|
     = render event.event_partial, event: event
