LG-538 New Document Authentication Design
**Why**: So our users can verify their identity on mobile phones with a camera or desktop computers with a scanned image.

**How**: Detect whether a user is one a mobile phone or a desktop.  Add new flows to accomodate desktop computers, mobile phones, desktop computers to mobile phones (ie user wants to use their camera), and mobile phones to desktop computers (ie user has a scanner).  Add image previews on document uploads.  Supply different verbiage for taking a picture vs. uploading an image.

--- a/app/views/idv/doc_auth/mobile_back_image.html.slim
+++ b/app/views/idv/doc_auth/mobile_back_image.html.slim
@@ -1,9 +1,15 @@
 -title t('doc_auth.titles.doc_auth')
 
-h1.h3.mb0 = t('doc_auth.headings.upload_back')
+h1.h3.mb0 = t('doc_auth.headings.take_pic_back')
 
-h5.mt0 = t('doc_auth.info.upload_image')
-= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :back_image), method: 'PUT',
+h5.mt0 = t('doc_auth.instructions.take_pic')
+ul
+  li = t('doc_auth.instructions.take_pic1')
+  li = t('doc_auth.instructions.take_pic2')
+  li = t('doc_auth.instructions.take_pic3')
+  li = t('doc_auth.instructions.take_pic4')
+
+= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :mobile_back_image), method: 'PUT',
     html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   .clearfix.mxn1
     .sm-col.sm-col-9.px1
