--- a/app/views/idv/doc_auth/mobile_front_image.html.slim
+++ b/app/views/idv/doc_auth/mobile_front_image.html.slim
@@ -1,14 +1,19 @@
 - title t('doc_auth.titles.doc_auth')
 
-h1.h3.mb0 = t('doc_auth.headings.upload_front')
+h1.h3.mb0 = t('doc_auth.headings.take_pic_back')
 
-h5.mt0 = t('doc_auth.info.upload_image')
-= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :front_image), method: 'PUT',
+h5.mt0 = t('doc_auth.instructions.take_pic')
+ul
+  li = t('doc_auth.instructions.take_pic1')
+  li = t('doc_auth.instructions.take_pic2')
+  li = t('doc_auth.instructions.take_pic3')
+  li = t('doc_auth.instructions.take_pic4')
+
+= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :mobile_front_image), method: 'PUT',
         html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   .clearfix.mxn1
     .sm-col.sm-col-8.px1
       = f.input :image, label: false, as: 'file', required: true
-  p.red.bold = flow_session[:error_message]
   div id= 'target'
   br
   .mt0
