--- a/app/views/idv/doc_auth/mobile_front_image.html.slim
+++ b/app/views/idv/doc_auth/mobile_front_image.html.slim
@@ -1,6 +1,6 @@
 - title t('doc_auth.titles.doc_auth')
 
-h1.h3.mb0 = t('doc_auth.headings.take_pic_back')
+h1.h3.mb0 = t('doc_auth.headings.take_pic_front')
 
 h5.mt0 = t('doc_auth.instructions.take_pic')
 ul
