--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -100,7 +100,7 @@ input::-webkit-inner-spin-button {
   z-index: -1;
 }
 
-.radio input.visible {
+.radio .visible {
   opacity: 1;
   position: relative;
   z-index: inherit;
