Remove platform_authenticator_analytics_enabled flag
**Why**: This is enabled everywhere and we should not be disabling it
anytime soon.

Additionally, we should consider moving the frontend analytics code
behind this into a Google Analytics event at some point.

--- a/app/views/layouts/base.html.slim
+++ b/app/views/layouts/base.html.slim
@@ -67,7 +67,9 @@ html lang="#{I18n.locale}" class='no-js'
 
     #session-timeout-cntnr
     - if current_user
-      = render 'shared/platform_authenticator'
+      / Render the JS snipped that collects platform authenticator analytics
+      div [data-platform-authenticator-enabled="true"]
+
       = auto_session_timeout_js
     - else
       = auto_session_expired_js
