--- a/app/views/user_mailer/please_reset_password.html.slim
+++ b/app/views/user_mailer/please_reset_password.html.slim
@@ -1,6 +1,6 @@
 p.lead
   = t('user_mailer.please_reset_password.intro')
-  =< @message if @message.present?
+  =< @message.presence
 
 p.lead
   = t('user_mailer.please_reset_password.call_to_action')
