--- a/app/views/idv/doc_auth/doc_failed.html.slim
+++ b/app/views/idv/doc_auth/doc_failed.html.slim
@@ -7,14 +7,15 @@ h1.h3.red = t('doc_auth.errors.state_id_fail')
 
   - f.simple_fields_for :doc_auth do
 
-    h4 = t('doc_auth.forms.state_id_info')
     ul
       li = "#{t('doc_auth.forms.first_name')}: #{flow_session[:matcher_pii_from_doc][:first_name]}"
       li = "#{t('doc_auth.forms.last_name')}: #{flow_session[:matcher_pii_from_doc][:last_name]}"
       li = "#{t('doc_auth.forms.dob')}: #{flow_session[:matcher_pii_from_doc][:dob]}"
-    h4 = t('doc_auth.forms.entered_info')
-    ul
-      li = "#{t('doc_auth.forms.ssn')}: #{flow_session[:ssn]}"
+      li = "#{t('doc_auth.forms.address1')}: #{flow_session[:matcher_pii_from_doc][:address1]}"
+      li = "#{t('doc_auth.forms.city')}: #{flow_session[:matcher_pii_from_doc][:city]}"
+      li = "#{t('doc_auth.forms.state')}: #{flow_session[:matcher_pii_from_doc][:state]}"
+      li = "#{t('doc_auth.forms.zip_code')}: #{flow_session[:matcher_pii_from_doc][:zipcode]}"
+      li = "#{t('doc_auth.forms.ssn')}: #{flow_session[:matcher_pii_from_doc][:ssn]}"
     .mt4
       button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
         = t('forms.buttons.continue')
