--- a/app/views/idv/address.html.slim
+++ b/app/views/idv/address.html.slim
@@ -7,7 +7,7 @@ h1.h3 = t('doc_auth.headings.address')
 
   = f.input :address1, label: t('idv.form.address1'), wrapper_html: { class: 'mb1' },
           required: true, maxlength: 255
-  = f.input :address2, label: t('idv.form.address2'), maxlength: 255
+  = f.input :address2, label: t('idv.form.address2'), required: false, maxlength: 255
   = f.input :city, label: t('idv.form.city'), required: true, maxlength: 255
 
   .clearfix.mxn1
