--- a/app/views/idv/doc_auth/verify.html.slim
+++ b/app/views/idv/doc_auth/verify.html.slim
@@ -12,13 +12,10 @@ div = "#{t('doc_auth.forms.city')}: #{flow_session[:pii_from_doc][:city]}"
 div = "#{t('doc_auth.forms.state')}: #{flow_session[:pii_from_doc][:state]}"
 div = "#{t('doc_auth.forms.zip_code')}: #{flow_session[:pii_from_doc][:zipcode]}"
 hr
-= form_for('change ssn', url: idv_doc_auth_step_path(:redo_ssn), method: 'PUT') do
-  .right = button_to(t('doc_auth.buttons.change_ssn'), idv_doc_auth_step_path(:redo_ssn),
-    method: :put, class: 'btn btn-link')
-  = "#{t('doc_auth.forms.ssn')}: #{flow_session[:pii_from_doc][:ssn]}"
-= form_for('', url: idv_doc_auth_step_path(step: :verify), method: 'PUT') do
-  .mt4
-    button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
-      = t('forms.buttons.continue')
+.right = button_to(t('doc_auth.buttons.change_ssn'), idv_doc_auth_step_path(step: :redo_ssn),
+  method: :put, class: 'btn btn-link')
+= "#{t('doc_auth.forms.ssn')}: #{flow_session[:pii_from_doc][:ssn]}"
+.mt4 = button_to(t('forms.buttons.continue'), idv_doc_auth_step_path(step: :verify), method: :put,
+  class: 'btn btn-primary btn-wide sm-col-6 col-12')
 
 = render 'start_over_or_cancel'
