adjust spacing and styles on docauth flow

--- a/app/assets/stylesheets/components/_list.scss
+++ b/app/assets/stylesheets/components/_list.scss
@@ -18,11 +18,11 @@
 }
 
 .circle-number {
-  font-size: 13px;
+  font-size: 1rem;
   font-weight: bold;
-  height: 20px;
+  height: 1.6rem;
   text-align: center;
-  width: 20px;
+  width: 1.6rem;
 }
 
 .success-bullets {
