--- a/app/views/idv/doc_auth/ssn.html.slim
+++ b/app/views/idv/doc_auth/ssn.html.slim
@@ -1,11 +1,11 @@
 -title t('doc_auth.titles.doc_auth')
 
-h1.h3 = t('doc_auth.headings.ssn')
+h1.h3.my0 = t('doc_auth.headings.ssn')
 
 = simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :ssn), method: 'PUT',
         html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   .clearfix.mxn1
-    .sm-col.sm-col-6.px1
+    .sm-col.sm-col-6.px1.mt2
       / using :tel for mobile numeric keypad
       = f.input :ssn, as: :tel,
               label: t('idv.form.ssn_label_html'), required: true,
