--- a/app/views/user_mailer/please_reset_password.html.slim
+++ b/app/views/user_mailer/please_reset_password.html.slim
@@ -1,6 +1,9 @@
-p.lead == t('user_mailer.please_reset_password.intro')
+p.lead
+  = t('user_mailer.please_reset_password.intro')
+  =< @message.presence
 
-p.lead == t('user_mailer.please_reset_password.call_to_action')
+p.lead
+  = t('user_mailer.please_reset_password.call_to_action')
 
 table.button.expanded.large.radius
   tbody
@@ -18,6 +21,10 @@ table.button.expanded.large.radius
 
 p
   = link_to forgot_password_url, forgot_password_url, target: '_blank'
+
+p.lead
+  = t('user_mailer.please_reset_password.additional_help_html',
+    contact_url: link_to(MarketingSite.contact_url, MarketingSite.contact_url))
 
 table.spacer
   tbody
