--- a/app/views/idv/usps/index.html.slim
+++ b/app/views/idv/usps/index.html.slim
@@ -10,7 +10,10 @@
     strong
       = t('idv.messages.usps.success')
 
-= render @presenter.usps_partial, presenter: @presenter
+- if @presenter.usps_mail_bounced?
+  = render 'idv/usps/new_address', presenter: @presenter
+- else
+  = render 'idv/usps/address_on_file', presenter: @presenter
 br
 br
 = button_to t('idv.messages.clear_and_start_over'), idv_session_path, method: :delete,
