--- a/app/views/user_mailer/undeliverable_address.slim
+++ b/app/views/user_mailer/undeliverable_address.slim
@@ -1,6 +1,6 @@
 p.lead == t('.intro', app: link_to(APP_NAME, Figaro.env.mailer_domain_name, class: 'gray'))
 
-p.lead == t('.call_to_action')
+p.lead == t('.call_to_action', link: link_to('login.gov', root_url))
 
 table.spacer
   tbody
