LG-863 Identity proofing from a computer with document capture from a mobile phone
**Why**: A majority of our users sign in with desktop/laptop computers but they lack a scanner or camera with sufficient resolution.

**How**: Create a new doc_captures table that will store mobile capture requests as a 1:1 to user.  When the user selects to capture on a mobile phone, create a request entry with a random request_token.  Then send a link to their mobile phone with this request token.  Have this token/link expire in 15 minutes.  Use the link to initiate a session that is only valid in the context of the user that requested the doc capture by storing the user_id in session but not as an authenticated user.  The sole capability of this session is the ability to upload a state issued id and update the user's doc_capture entry with a document id.  No PII is saved on the mobile capture and no PII is passed between sessions.  Moreover this unauthenticated user has no access to the user's account.  When the user is finished capturing the document on the mobile phone they will switch back to the desktop flow.  The desktop flow checks for a valid document id in the doc_captures table and continues document authentication as before.

--- a/app/views/idv/doc_auth/link_sent.html.slim
+++ b/app/views/idv/doc_auth/link_sent.html.slim
@@ -1,8 +1,14 @@
 - title t('doc_auth.titles.doc_auth')
 
-= image_tag(asset_url('state-id-confirm@3x.png'),
-        alt: t('idv.titles.session.success'), width: 210)
+h1.h3.my0 = t('doc_auth.headings.text_message')
+br
+.clearfix.mxn1
+  .sm-col.sm-col-3.px1 = image_tag asset_url('idv/phone.png')
+  .sm-col.sm-col-9.px1.h1.h2.mb2.mt0.my0 = t('doc_auth.info.link_sent')
 
-h1.h3.mb2.mt3.my0 = t('doc_auth.info.link_sent')
-
+.mt0
+br
+= button_to(t('forms.buttons.continue'), idv_doc_auth_step_path(step: :link_sent), method: :put,
+    class: 'btn btn-primary btn-wide sm-col-6 col-12')
+br
 = render 'start_over_or_cancel'
