--- a/app/views/user_mailer/password_changed.html.slim
+++ b/app/views/user_mailer/password_changed.html.slim
@@ -12,5 +12,6 @@ table.hr
 
 p == t('.help',
       app: link_to(APP_NAME, Figaro.env.mailer_domain_name, class: 'gray'),
+      disavowal_link: link_to(t('.disavowal_link'), event_disavowal_url(disavowal_token: @disavowal_token)),
       help_link: link_to(t('user_mailer.help_link_text'), MarketingSite.help_url),
       contact_link: link_to(t('user_mailer.contact_link_text'), MarketingSite.contact_url))
