--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -9,6 +9,8 @@
 
 = render @view_model.pending_profile_partial, view_model: @view_model
 
+= render @view_model.phishable_status_partial, view_model: @view_model
+
 h1.hide = t('titles.account')
 
 = render @view_model.header_partial, view_model: @view_model
