LG-920 New IAL2 Account Recovery

--- a/app/views/idv/doc_auth/back_image.html.slim
+++ b/app/views/idv/doc_auth/back_image.html.slim
@@ -3,7 +3,7 @@
 h1.h3.my0 = t('doc_auth.headings.upload_back')
 
 = t('doc_auth.info.upload_image')
-= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :back_image), method: 'PUT',
+= simple_form_for(:doc_auth, url: url_for, method: 'PUT',
     html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   .clearfix.mxn1
     .sm-col.sm-col-8.px1.mt2
@@ -15,5 +15,5 @@ h1.h3.my0 = t('doc_auth.headings.upload_back')
       = t('forms.buttons.continue')
 br
 
-= render 'start_over_or_cancel'
+= render 'idv/doc_auth/start_over_or_cancel'
 == javascript_pack_tag 'image-preview'
