--- a/app/views/account_reset/recover/show.html.slim
+++ b/app/views/account_reset/recover/show.html.slim
@@ -1,12 +1,14 @@
 - title t('doc_auth.titles.doc_auth')
 
-= image_tag(asset_url('state-id-confirm@3x.png'),
-        alt: t('idv.titles.session.success'), width: 210)
+= image_tag(asset_url('alert/warning.svg'), size: '60')
 
-h1.h3.mb2.mt3.my0 = t('doc_auth.forms.doc_success')
-
+h1.h3.mb2.mt3.my0 = t('recover.request.reverify')
+hr
+h1.h3.mb2.mt3.my0 = t('recover.request.confirm_email')
+= t('recover.request.instructions')
 br
-= form_for('', url: url_for, method: 'PUT',
+br
+= form_for('', url: account_reset_recover_path, method: 'POST',
         html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   - f.simple_fields_for :doc_auth do
     button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
