--- a/app/views/idv/doc_auth/email_sent.html.slim
+++ b/app/views/idv/doc_auth/email_sent.html.slim
@@ -5,4 +5,4 @@
 
 h1.h3.mb2.mt3.my0 = t('doc_auth.instructions.email_sent', email: current_user.email)
 
-= render 'start_over_or_cancel'
+= render 'idv/doc_auth/start_over_or_cancel'
