--- a/app/views/idv/doc_auth/send_link.html.slim
+++ b/app/views/idv/doc_auth/send_link.html.slim
@@ -8,7 +8,7 @@ p.mt-tiny.mb3.bold = t('doc_auth.info.camera_required')
 
 p.mt-tiny.mb3 = t('doc_auth.instructions.send_sms')
 
-= simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :send_link), method: 'PUT',
+= simple_form_for(:doc_auth, url: url_for, method: 'PUT',
         html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   .clearfix.mxn1
     .sm-col.sm-col-8.px1
@@ -23,4 +23,4 @@ p.mt-tiny.mb3 = t('doc_auth.instructions.send_sms')
     button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
       = t('forms.buttons.continue')
 
-= render 'start_over_or_cancel'
+= render 'idv/doc_auth/start_over_or_cancel'
