--- a/app/views/idv/doc_auth/upload.html.slim
+++ b/app/views/idv/doc_auth/upload.html.slim
@@ -13,7 +13,7 @@ hr
   .sm-col.sm-col-9
     .bold.h1.mb1 = t('doc_auth.headings.upload_from_computer')
     = t('doc_auth.info.upload_from_computer')
-    = simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :upload, type: :desktop),
+    = simple_form_for(:doc_auth, url: url_for(type: :desktop),
       method: 'PUT', html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do
       button type='submit' class='btn btn-primary'
         = t('doc_auth.buttons.use_computer')
@@ -27,10 +27,10 @@ hr
     .bold.h1.mb1 = t('doc_auth.headings.upload_from_phone')
     = t('doc_auth.info.upload_from_phone')
     br
-    = simple_form_for(:doc_auth, url: idv_doc_auth_step_path(step: :upload, type: :mobile),
+    = simple_form_for(:doc_auth, url: url_for(type: :mobile),
             method: 'PUT', html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do
       button type='submit' class='btn btn-primary'
         = t('doc_auth.buttons.use_phone')
 
-= render 'start_over_or_cancel'
+= render 'idv/doc_auth/start_over_or_cancel'
 == javascript_pack_tag 'image-preview'
